fixed the loading bar for mobile devices. changes size of the logo on small devices.

--- a/LearnWithKate/assets/css/custom.css
+++ b/LearnWithKate/assets/css/custom.css
@@ -113,7 +113,7 @@ p {
 #loading-bar {
   position: fixed;
   width: 0px;
-  top: 91px;
+  top: 79px;
   left: 0;
   height: 6px;
   z-index: 10;
@@ -559,6 +559,10 @@ button.collapsed:visited {
 @media (max-width: 600px) {
   .logo-link {
     flex-direction: column;
+  }
+
+  .logo-link .logo-text h2 {
+    font-size: 0.9rem !important;
   }
 
   .book-a-lesson-btn {
